--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'junit:junit:4.12'
 
     //CardView
-    compile 'com.android.support:cardview-v7:25.2.0'
+    compile 'com.android.support:cardview-v7:25.3.1'
 
     //RecyclerView
     compile 'com.android.support:recyclerview-v7:25.3.1'
@@ -59,14 +59,14 @@ dependencies {
     testCompile 'org.mockito:mockito-core:2.7.22'
     //Mockito for Android tests
     androidTestCompile 'org.mockito:mockito-android:2.7.22'
-
-    // Android runner and rules support
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support.test:rules:0.5'
-
-    //Espresso... for intent mocking support
-    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
-
-    //Espresso... for webview testing support
-    androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2.2'
+//
+//    // Android runner and rules support
+//    androidTestCompile 'com.android.support.test:runner:0.5'
+//    androidTestCompile 'com.android.support.test:rules:0.5'
+//
+//    //Espresso... for intent mocking support
+//    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
+//
+//    //Espresso... for webview testing support
+//    androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2.2'
 }
